# AIACCEL

./: .gitignore  README.md
HIP/: 2_1synchronize_data.c  test.c
Intro/: 1_2hello_world.c  1_2hello_world.cc  2_2montecarlo_syncThreads.c
cuda/0_profile/: 0_kernel_profile.py
cuda/1_ccuda/: 0_hello.cu  1_vecadd.cu  Makefile  cudaMPI.pbs  vecadd
cuda/CUTLASS/: README.md
cuda/compilers/: README.md
cuda/compilers/0_hello_clang/: README.md  test.c  test.cc
cuda/compilers/1_llvm_ir/: README.md  hello.c
cuda/triton/0_hello_triton_fma/: README.md  fma_kernel.py
cuda/utils/: data_gen.cu  data_gen.h
ds/: arrange.sh
ds/arrays/: 0_contains_duplicate.cc
ds/arrays/0_contains_duplicate/: 0_contains_duplicate.cc
ds/arrays/10_190.reverse-bits/: 190.reverse-bits.py  README.md
ds/arrays/11_121.best-time-to-buy-and-sell-stock/: 121.best-time-to-buy-and-sell-stock.py  (+1 more)
ds/hashmap/: arrange.sh
ds/sliding_window/: 433.minimum-genetic-mutation.py
ds/trees/: 0_invert_binary_tree.cc  3_balanced_binary_tree.cc  4_same_binary_tree.cc  5_tree_subtree.cc
microarch/: environment.yml
microarch/caches/: README.md
parallel/: 1_2_xhello_world.cc  1_2hello_world.c  1_2hello_world.cc  producer_consumer.cc
parallel/1_hello_world/: 1_2_hello_world2.cc  1_hello_world.c
parallel/2_sync_threads/: 2_2montecarlo_syncThreads.c
parallel/3_threads_processes/: README.md  processes.cc  threads.cc
parallel/4_race_conditions/: 4_race_cond.c  4_race_cond.s  4_race_cond_mutex.c  4_race_cond_mutex.s  4_race_cond_mutex_float.c  4_race_cond_mutex_float.s  README.md
parallel/6_threads_return/: 6_threads_return.cc  scatter_allreduce_openmpi  scatter_allreduce_openmpi.c  tensor.cc
parallel/producer_consumer/: README.md  producer_consumer.cc
x_cuda/: README.md  shared_memory_vs_global  shared_vs_global.cu
x_cuda/1_vectoradd_make/: vecadd
x_cuda/2_slidingwindowmul3_sharedmem/: shared_vs_global.cu
x_cuda/3_imageedit_grids_bw/: 3_imageedit_grids_bw.cu  Makefile  README.md  out.txt  out2.txt
x_cuda/4_matmul/: 4_matmul.cu  4_matmul_nvbench.cu  CMakeLists.txt  Makefile  README.md  out_matmul.txt  out_matmul_nvbench.txt
x_cuda/5_matmul_tiled/: 5_matmul_tiled.cu  5_matmul_tiled_nvbench.cu  CMakeLists.txt  Makefile  README.md  kernels.cu  kernels.cuh  run.sh
x_cuda/6_conv/: 6_conv.cu  Makefile  README.md  conv_filters.h  kernels.cu  kernels.cuh  run.sh
x_cuda/utils/: data_gen.cu  data_gen.h  image_data_gen.cc  image_data_gen.h  simple_funcs.cc  simple_funcs.h
(+97 files in other folders)
